# voltz

./: .gitignore  Cargo.toml  compile_shaders.sh
assets/: index.yml
assets/model/block/: air.yml  cube.yml  dirt.yml  grass.yml  melium.yml  sand.yml  stone.yml  unknown.yml  water.yml
assets/shader/blit/: fragment.glsl  vertex.glsl
assets/shader/chunk/: fragment.glsl  vertex.glsl
assets/shader/include/: biomes.glsl  blocks.glsl  noise.glsl
assets/shader/worldgen/biomegrid/: biomes.glsl  land.glsl  land.spv  noise.glsl  rivers.glsl  rivers.spv  rng.glsl  smooth.glsl  smooth.spv  zoom.glsl  zoom.spv
assets/shader/worldgen/region/: region.glsl  region.spv
assets/shader_compiled/blit/: fragment.spv  vertex.spv
assets/shader_compiled/chunk/: fragment.spv  vertex.spv
client/: Cargo.toml
common/: Cargo.toml
common/block-macros/: Cargo.toml
common/fuzz/: Cargo.toml
common/fuzz/fuzz_targets/: chunk.rs
common/src/: block.rs  chunk.rs  lib.rs  world.rs
common/src/block/: blocks.rs
crates/client/: Cargo.toml
crates/client/src/: asset.rs  camera.rs  conn.rs  debug.rs  entity.rs  event.rs  game.rs  input.rs  main.rs  renderer.rs  ui.rs  update_server.rs
crates/client/src/asset/: font.rs  model.rs  shader.rs  texture.rs
crates/client/src/renderer/: chunk.rs  present.rs  ui.rs  utils.rs
crates/client/src/renderer/chunk/: cull.rs  mesher.rs
crates/client/src/renderer/chunk/mesher/: algo.rs  compile.rs
crates/client/src/renderer/utils/: scaler.rs  texture_array.rs
crates/common/: Cargo.toml
crates/common/block-macros/: Cargo.toml
crates/common/block-macros/src/: lib.rs
crates/common/fuzz/fuzz_targets/: zone.rs
crates/common/src/: biome.rs  block.rs  chunk.rs  entity.rs  event.rs  gpu.rs  lib.rs  system.rs  world.rs
crates/common/src/block/: blocks.rs
crates/common/src/entity/: player.rs
crates/ecs/: Cargo.toml
crates/physics/: Cargo.toml
crates/physics/src/: collision.rs  lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: bridge.rs  lib.rs  packets.rs
crates/protocol/src/packets/: client.rs  server.rs  shared.rs
crates/server/: Cargo.toml
crates/server/src/: conn.rs  event.rs  game.rs  lib.rs  mailbox.rs  view.rs
crates/ui/: Cargo.toml
crates/ui/examples/: test.rs  text.rs
crates/ui/src/: canvas.rs  lib.rs  ui.rs  widget.rs  widgets.rs
crates/ui/src/widgets/: container.rs  rectangle.rs  text.rs
crates/utils/: Cargo.toml
crates/utils/src/: bitset.rs  bytecount.rs  geom.rs  lib.rs  packed_array.rs  track_alloc.rs
crates/worldgen/: Cargo.toml
crates/worldgen/examples/: save_biomes.rs
crates/worldgen/src/: biomes.rs  density.rs  lib.rs  region.rs  trilerp.rs
ecs/src/: lib.rs
