cargo-features = ["named-profiles"]

[workspace]
members = [
    "crates/utils",
    "crates/common",
    "crates/common/block-macros",
    "crates/worldgen",
    "crates/physics",
    "crates/protocol",
    "crates/server",
    "crates/ui",
    "crates/client",
]

[profile.dev]
opt-level = 1

[profile.measure]
inherits = "release"
lto = true
debug = true
codegen-units = 1
