cargo-features = ["named-profiles"]

[workspace]
members = [
    "crates/utils",
    "crates/common",
    "crates/common/block-macros",
    "crates/worldgen",
    "crates/physics",
    "crates/protocol",
    "crates/server",
    "crates/ui",
    "crates/client",
]

[profile.dev]
opt-level = 1

[profile.dev.package.wgpu]
opt-level = 3

[profile.dev.package.wgpu-core]
opt-level = 3

[profile.dev.package.gfx-backend-vulkan]
opt-level = 3

[profile.dev.package.deflate]
opt-level = 3

[profile.measure]
inherits = "release"
lto = true
debug = true
codegen-units = 1
