[package]
name = "client"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"
default-run = "client"

[dependencies]
common = { path = "../common" }
physics = { path = "../physics" }
server = { path = "../server" }
protocol = { path = "../protocol" }
utils = { path = "../utils" }
voltzui = { path = "../ui" }
hecs = { version = "0.3", features = ["macros"] }

wgpu = "0.6"
glam = { version = "0.11", features = ["bytemuck"] }
splines = { version = "3", features = ["impl-glam"] }
sdl2 = { version = "0.34", features = ["raw-window-handle"] }
fontdue = "0.4"
tiny-skia = "0.2"
image = { version = "0.23", default-features = false, features = ["png"] }
guillotiere = "0.6"

anyhow = "1"
thiserror = "1"
ahash = "0.6"
bumpalo = { path = "../../../bumpalo" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
walkdir = "2"
bytemuck = { version = "1", features = ["derive"] }
indoc = "1"

rand = "0.7"
rand_pcg = "0.2"

log = "0.4"
simple_logger = "1"

rayon = "1"
crossbeam-queue = "0.3"
futures-executor = "0.3"
