[package]
name = "client"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"
default-run = "client"

[dependencies]
common = { path = "../common" }
physics = { path = "../physics" }
server = { path = "../server" }
protocol = { path = "../protocol" }
utils = { path = "../utils" }
voltzui = { path = "../ui" }
hecs = { version = "0.3", features = ["macros"] }

wgpu = "0.6"
winit = { version = "0.24", default-features = false, features = ["x11"] }
glam = { version = "0.11", features = ["bytemuck"] }
splines = { version = "3", features = ["impl-glam"] }
fontdue = { git = "https://github.com/mooman219/fontdue" }
tiny-skia = "0.2"
image = { version = "0.23", default-features = false, features = ["png"] }
guillotiere = "0.6"

anyhow = "1"
thiserror = "1"
ahash = "0.6"
bumpalo = { git = "https://github.com/caelunshun/bumpalo", branch = "allocator-api" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
walkdir = "2"
bytemuck = { version = "1", features = ["derive"] }
indoc = "1"
bitflags = "1"
arrayvec = "0.5"
hashbrown = { git = "https://github.com/rust-lang/hashbrown", features = ["nightly"] }
path-slash = "0.1"

rand = "0.7"
rand_pcg = "0.2"

log = "0.4"
simple_logger = "1"

rayon = "1"
crossbeam-queue = "0.3"
futures-executor = "0.3"
