[package]
name = "common"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
utils = { path = "../utils" }
block-macros = { path = "./block-macros" }
hecs = { version = "0.3", features = ["macros"] }

serde = { version = "1", features = ["derive"] }
once_cell = "1"
ahash = "0.6"
thiserror = "1"
uuid = { version = "0.8", features = ["v4"] }
glam = "0.11"
