[package]
name = "protocol"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }

serde = { version = "1", features = ["derive"] }
bincode = "1"
glam = { version = "0.11", features = ["serde"] }
log = "0.4"
flume = { version = "0.10", default-features = false }
derivative = "2"
