[package]
name = "server"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
protocol = { path = "../protocol" }
worldgen = { path = "../worldgen" }
hecs = "0.3"

anyhow = "1"
bumpalo = { path = "../../../bumpalo" }
glam = "0.11"
hashbrown = { git = "https://github.com/rust-lang/hashbrown", features = ["nightly"] }
rayon = "1"

rand = "0.7"
rand_pcg = "0.2"

log = "0.4"
