[package]
name = "worldgen"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
common = { path = "../common" }
utils = { path = "../utils" }
wgpu = "0.6"
bytemuck = { version = "1", features = ["derive"] }
bumpalo = { git = "https://github.com/caelunshun/bumpalo", branch = "allocator-api" }
anyhow = "1"
rand = "0.7"
rand_pcg = "0.2"
rayon = "1"
once_cell = "1"
futures-executor = "0.3"

[dev-dependencies]
image = { version = "0.23", default-features = false, features = ["png"] }
renderdoc = "0.9"
